Added an author

--- a/Final/templates/index.html
+++ b/Final/templates/index.html
@@ -3,6 +3,7 @@
     Authors: 
         Javier Mondragon Martin del Campo 
         Luis Alejandro Enriquez Solis
+        Marisa Diaz
 -->
 
 <html>
