--- a/Final/templates/index.html
+++ b/Final/templates/index.html
@@ -15,13 +15,13 @@
     </head>
     <body>
         <header>
-            <div class="subhead">
+            <div class="subhead temp">
                 <a id="temp">Temperature</a>
             </div>
             <div class="spacer"></div>
             <div class="title">Jarvis</div>
             <div class="spacer"></div>
-            <div class="subhead">
+            <div class="subhead time">
                 <a id="time">Time</a>
             </div>
         </header>
